Simplify to default network only
